added error corrections to index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     var i = 0;
     var like = prompt('Do dogs bark?');
-        if(like == 'yes')
+        if(like == 'yes' || like == 'YES' || like == 'Yes' || like == 'Y' || like == 'y')
         {
           alert('You are right! Dogs do bark!');
           i++;
@@ -45,7 +45,7 @@
 
 
     var have = prompt('Does Starbucks sell coffee?');
-        if(have == 'yes')
+        if(have == 'yes' || have == 'YES' || have == 'Y' || have == 'y' || have == 'Yes')
         {
           alert('You are right! Starbucks does sell coffee!');
           i++;
@@ -56,7 +56,7 @@
         }
 
     var want = prompt('Is Seattle in Washington?')
-        if(want == 'yes')
+        if(want == 'yes' || want == 'Yes' || want == 'YES' || want == 'Y' || want == 'y')
         {
           alert('You are right! Seattle is in Washington');
           i++;
