in HTML added JavaScript tags one-five in headers. In js, removed alerts and replaced with one.textContent so responses appear in browser, not in pop ups anymore.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
 
     <h1> Greeting Script and Guessing Game</h1>
 
+    <h2> Do dogs bark?</h2>
+    <h3 id="one"> </h3>
+
+    <h2> Does Starbucks sell coffee?</h2>
+    <h3 id="two"> </h3>
+
+    <h2> Is Seattle in Washington?</h2>
+    <h3 id="three"> </h3>
+
+    <h2> Can you guess my number?</h2>
+    <h3 id="four"> </h3>
+
+    <h2> What is the best way of transportation for Seattlites?</h2>
+    <h3 id="five"> </h3>
+
+
+
     <h2> Here's a description of what is going on in the background: </h2>
 
       <p> As you noticed when arriving at this page you were immediately intruded with a pop up window asking you for your name! This was done using a <b>prompt</b>, this automatically executes a window prompting you (hint hint) to answer what is asked. Then, there is an <b>alert</b> that has interpereted your name and input it into a sentence. The alert is used here, instead of prompt, since you, as the user, do not have to provide an answer. The process behind all of this code to produce an action is summed up into four letters, REPL. This says the code is Reading, Evaluating, Printing, and Looping what you have instructed it to do. Following the introduction pop up you are asked a series of yes or no questions for which you are told whether or not you have answered them correctly, and at the end the total answered correctly. This is calculated using an increment operator, this keeps track of your correct answers along the way, calculating them at the end. Lastly, there is a debugging message that appears in the console of your computer, hidden from the you, the user. This is often used to show developers whether or not the function is properly executing what is intended! </p>
@@ -23,7 +40,7 @@
       <p>My professional interests include coding, design, UI/UX, team collaboration, and problem solving in the work space.</p>
 
 
-    <script src = 'game.js'> </script>
+    <script src="game.js"></script>
 
   </body>
 
