added CSS page, added classes right/wrong in js so able to determine color based on answer.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <html>
 
   <head>
+
     <title> Assignment 1 </title>
+    <link href="gamestyle.css" type="text/css" rel="stylesheet">
+
   </head>
 
   <body>
